Compiladores Fase 2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BLACK_FLAG
    BLUE_FLAG
    ENDGRID
    GRID
    LAP_NOTE
    PADDOCK
    RED_FLAG
    SAFETY_IN
    SAFETY_OUT
    UNDERCUT_KW

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> main_program
Rule 2     translation_unit -> function_list main_program
Rule 3     translation_unit -> main_program function_list
Rule 4     translation_unit -> function_list main_program function_list
Rule 5     function_list -> function_definition
Rule 6     function_list -> function_list function_definition
Rule 7     main_program -> RACE_START GARAGE block_item_list READY
Rule 8     main_program -> RACE_START GARAGE READY
Rule 9     function_definition -> STRATEGY type_specifier ID CORNER parameter_list APEX compound_statement
Rule 10    function_definition -> STRATEGY type_specifier ID CORNER APEX compound_statement
Rule 11    function_definition -> STRATEGY NEUTRO ID CORNER parameter_list APEX compound_statement
Rule 12    function_definition -> STRATEGY NEUTRO ID CORNER APEX compound_statement
Rule 13    parameter_list -> parameter_declaration
Rule 14    parameter_list -> parameter_list ALSO parameter_declaration
Rule 15    parameter_declaration -> type_specifier ID
Rule 16    type_specifier -> LAP
Rule 17    type_specifier -> SPLIT
Rule 18    type_specifier -> PITBOARD
Rule 19    type_specifier -> YELLOW_FLAG
Rule 20    type_specifier -> RADIO
Rule 21    compound_statement -> GARAGE block_item_list READY
Rule 22    compound_statement -> GARAGE READY
Rule 23    block_item_list -> block_item
Rule 24    block_item_list -> block_item_list block_item
Rule 25    block_item -> declaration
Rule 26    block_item -> statement
Rule 27    declaration -> type_specifier ID SETUP expression STOP
Rule 28    declaration -> type_specifier ID STOP
Rule 29    declaration -> VSC type_specifier ID SETUP expression STOP
Rule 30    statement -> expression_statement
Rule 31    statement -> compound_statement
Rule 32    statement -> selection_statement
Rule 33    statement -> iteration_statement
Rule 34    statement -> jump_statement
Rule 35    statement -> io_statement
Rule 36    statement -> end_statement
Rule 37    expression_statement -> expression STOP
Rule 38    expression_statement -> STOP
Rule 39    block_item -> error STOP
Rule 40    compound_statement -> GARAGE error READY
Rule 41    function_definition -> STRATEGY error READY
Rule 42    main_program -> RACE_START GARAGE error READY
Rule 43    selection_statement -> STRATEGY_CHECK CORNER expression APEX compound_statement
Rule 44    selection_statement -> STRATEGY_CHECK CORNER expression APEX compound_statement STAY_OUT compound_statement
Rule 45    selection_statement -> STRATEGY_CHECK CORNER expression APEX compound_statement STAY_OUT selection_statement
Rule 46    selection_statement -> GAP_CHECK CORNER expression APEX GARAGE case_list READY
Rule 47    selection_statement -> PITWALL CORNER expression APEX GARAGE case_list READY
Rule 48    case_list -> case_item
Rule 49    case_list -> case_list case_item
Rule 50    case_item -> SECTOR expression MARSHALL block_item_list
Rule 51    case_item -> NO_DATA MARSHALL block_item_list
Rule 52    iteration_statement -> PUSH CORNER expression APEX compound_statement
Rule 53    iteration_statement -> BOX compound_statement PUSH CORNER expression APEX STOP
Rule 54    iteration_statement -> FORMATION_LAP CORNER for_init expression for_semi expression APEX compound_statement
Rule 55    iteration_statement -> FORMATION_LAP CORNER for_init expression for_semi APEX compound_statement
Rule 56    iteration_statement -> FORMATION_LAP CORNER for_semi for_semi APEX compound_statement
Rule 57    for_semi -> STOP
Rule 58    for_init -> type_specifier ID SETUP expression for_semi
Rule 59    for_init -> expression for_semi
Rule 60    for_init -> for_semi
Rule 61    jump_statement -> PODIO expression STOP
Rule 62    jump_statement -> PODIO STOP
Rule 63    jump_statement -> BOX_BOX STOP
Rule 64    jump_statement -> DRS STOP
Rule 65    io_statement -> BROADCAST CORNER expression APEX STOP
Rule 66    io_statement -> TELEMETRY CORNER ID APEX STOP
Rule 67    end_statement -> CHECKERED_FLAG STOP
Rule 68    expression -> expression TOW expression
Rule 69    expression -> expression GAP expression
Rule 70    expression -> expression ERS expression
Rule 71    expression -> expression STINT expression
Rule 72    expression -> expression FUEL_DELTA expression
Rule 73    expression -> expression DEAD_HEAT expression
Rule 74    expression -> expression OUTLAP expression
Rule 75    expression -> expression UNDERCUT expression
Rule 76    expression -> expression OVERCUT expression
Rule 77    expression -> expression UNDEREQ expression
Rule 78    expression -> expression OVEREQ expression
Rule 79    expression -> expression BOTH_TYRES expression
Rule 80    expression -> expression EITHER_TYRE expression
Rule 81    expression -> expression SAFETY expression
Rule 82    expression -> expression OVERTAKE expression
Rule 83    expression -> GAP expression
Rule 84    expression -> REVERSE_GRID expression
Rule 85    expression -> REVERSE expression
Rule 86    expression -> CORNER expression APEX
Rule 87    expression -> ID SETUP expression
Rule 88    expression -> ID PITSTOW expression
Rule 89    expression -> ID PITGAP expression
Rule 90    expression -> ID PITERS expression
Rule 91    expression -> ID PITSTINT expression
Rule 92    expression -> ID FASTLAP
Rule 93    expression -> ID DEGRADATION
Rule 94    expression -> SLIPSTREAM expression
Rule 95    expression -> POSITION expression
Rule 96    expression -> ID CORNER argument_list APEX
Rule 97    expression -> ID CORNER APEX
Rule 98    argument_list -> expression
Rule 99    argument_list -> argument_list ALSO expression
Rule 100   expression -> ID
Rule 101   expression -> INT_LITERAL
Rule 102   expression -> FLOAT_LITERAL
Rule 103   expression -> STRING_LITERAL
Rule 104   expression -> CHAR_LITERAL
Rule 105   expression -> GREEN_LIGHT
Rule 106   expression -> RED_LIGHT
Rule 107   expression -> DNF

Terminals, with rules where they appear

ALSO                 : 14 99
APEX                 : 9 10 11 12 43 44 45 46 47 52 53 54 55 56 65 66 86 96 97
BLACK_FLAG           : 
BLUE_FLAG            : 
BOTH_TYRES           : 79
BOX                  : 53
BOX_BOX              : 63
BROADCAST            : 65
CHAR_LITERAL         : 104
CHECKERED_FLAG       : 67
CORNER               : 9 10 11 12 43 44 45 46 47 52 53 54 55 56 65 66 86 96 97
DEAD_HEAT            : 73
DEGRADATION          : 93
DNF                  : 107
DRS                  : 64
EITHER_TYRE          : 80
ENDGRID              : 
ERS                  : 70
FASTLAP              : 92
FLOAT_LITERAL        : 102
FORMATION_LAP        : 54 55 56
FUEL_DELTA           : 72
GAP                  : 69 83
GAP_CHECK            : 46
GARAGE               : 7 8 21 22 40 42 46 47
GREEN_LIGHT          : 105
GRID                 : 
ID                   : 9 10 11 12 15 27 28 29 58 66 87 88 89 90 91 92 93 96 97 100
INT_LITERAL          : 101
LAP                  : 16
LAP_NOTE             : 
MARSHALL             : 50 51
NEUTRO               : 11 12
NO_DATA              : 51
OUTLAP               : 74
OVERCUT              : 76
OVEREQ               : 78
OVERTAKE             : 82
PADDOCK              : 
PITBOARD             : 18
PITERS               : 90
PITGAP               : 89
PITSTINT             : 91
PITSTOW              : 88
PITWALL              : 47
PODIO                : 61 62
POSITION             : 95
PUSH                 : 52 53
RACE_START           : 7 8 42
RADIO                : 20
READY                : 7 8 21 22 40 41 42 46 47
RED_FLAG             : 
RED_LIGHT            : 106
REVERSE              : 85
REVERSE_GRID         : 84
SAFETY               : 81
SAFETY_IN            : 
SAFETY_OUT           : 
SECTOR               : 50
SETUP                : 27 29 58 87
SLIPSTREAM           : 94
SPLIT                : 17
STAY_OUT             : 44 45
STINT                : 71
STOP                 : 27 28 29 37 38 39 53 57 61 62 63 64 65 66 67
STRATEGY             : 9 10 11 12 41
STRATEGY_CHECK       : 43 44 45
STRING_LITERAL       : 103
TELEMETRY            : 66
TOW                  : 68
UNDERCUT             : 75
UNDERCUT_KW          : 
UNDEREQ              : 77
VSC                  : 29
YELLOW_FLAG          : 19
error                : 39 40 41 42

Nonterminals, with rules where they appear

argument_list        : 96 99
block_item           : 23 24
block_item_list      : 7 21 24 50 51
case_item            : 48 49
case_list            : 46 47 49
compound_statement   : 9 10 11 12 31 43 44 44 45 52 53 54 55 56
declaration          : 25
end_statement        : 36
expression           : 27 29 37 43 44 45 46 47 50 52 53 54 54 55 58 59 61 65 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 84 85 86 87 88 89 90 91 94 95 98 99
expression_statement : 30
for_init             : 54 55
for_semi             : 54 55 56 56 58 59 60
function_definition  : 5 6
function_list        : 2 3 4 4 6
io_statement         : 35
iteration_statement  : 33
jump_statement       : 34
main_program         : 1 2 3 4
parameter_declaration : 13 14
parameter_list       : 9 11 14
selection_statement  : 32 45
statement            : 26
translation_unit     : 0
type_specifier       : 9 10 15 27 28 29 58

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . main_program
    (2) translation_unit -> . function_list main_program
    (3) translation_unit -> . main_program function_list
    (4) translation_unit -> . function_list main_program function_list
    (7) main_program -> . RACE_START GARAGE block_item_list READY
    (8) main_program -> . RACE_START GARAGE READY
    (42) main_program -> . RACE_START GARAGE error READY
    (5) function_list -> . function_definition
    (6) function_list -> . function_list function_definition
    (9) function_definition -> . STRATEGY type_specifier ID CORNER parameter_list APEX compound_statement
    (10) function_definition -> . STRATEGY type_specifier ID CORNER APEX compound_statement
    (11) function_definition -> . STRATEGY NEUTRO ID CORNER parameter_list APEX compound_statement
    (12) function_definition -> . STRATEGY NEUTRO ID CORNER APEX compound_statement
    (41) function_definition -> . STRATEGY error READY

    RACE_START      shift and go to state 4
    STRATEGY        shift and go to state 6

    translation_unit               shift and go to state 1
    main_program                   shift and go to state 2
    function_list                  shift and go to state 3
    function_definition            shift and go to state 5

state 1

    (0) S' -> translation_unit .



state 2

    (1) translation_unit -> main_program .
    (3) translation_unit -> main_program . function_list
    (5) function_list -> . function_definition
    (6) function_list -> . function_list function_definition
    (9) function_definition -> . STRATEGY type_specifier ID CORNER parameter_list APEX compound_statement
    (10) function_definition -> . STRATEGY type_specifier ID CORNER APEX compound_statement
    (11) function_definition -> . STRATEGY NEUTRO ID CORNER parameter_list APEX compound_statement
    (12) function_definition -> . STRATEGY NEUTRO ID CORNER APEX compound_statement
    (41) function_definition -> . STRATEGY error READY

    $end            reduce using rule 1 (translation_unit -> main_program .)
    STRATEGY        shift and go to state 6

    function_list                  shift and go to state 7
    function_definition            shift and go to state 5

state 3

    (2) translation_unit -> function_list . main_program
    (4) translation_unit -> function_list . main_program function_list
    (6) function_list -> function_list . function_definition
    (7) main_program -> . RACE_START GARAGE block_item_list READY
    (8) main_program -> . RACE_START GARAGE READY
    (42) main_program -> . RACE_START GARAGE error READY
    (9) function_definition -> . STRATEGY type_specifier ID CORNER parameter_list APEX compound_statement
    (10) function_definition -> . STRATEGY type_specifier ID CORNER APEX compound_statement
    (11) function_definition -> . STRATEGY NEUTRO ID CORNER parameter_list APEX compound_statement
    (12) function_definition -> . STRATEGY NEUTRO ID CORNER APEX compound_statement
    (41) function_definition -> . STRATEGY error READY

    RACE_START      shift and go to state 4
    STRATEGY        shift and go to state 6

    main_program                   shift and go to state 8
    function_definition            shift and go to state 9

state 4

    (7) main_program -> RACE_START . GARAGE block_item_list READY
    (8) main_program -> RACE_START . GARAGE READY
    (42) main_program -> RACE_START . GARAGE error READY

    GARAGE          shift and go to state 10


state 5

    (5) function_list -> function_definition .

    RACE_START      reduce using rule 5 (function_list -> function_definition .)
    STRATEGY        reduce using rule 5 (function_list -> function_definition .)
    $end            reduce using rule 5 (function_list -> function_definition .)


state 6

    (9) function_definition -> STRATEGY . type_specifier ID CORNER parameter_list APEX compound_statement
    (10) function_definition -> STRATEGY . type_specifier ID CORNER APEX compound_statement
    (11) function_definition -> STRATEGY . NEUTRO ID CORNER parameter_list APEX compound_statement
    (12) function_definition -> STRATEGY . NEUTRO ID CORNER APEX compound_statement
    (41) function_definition -> STRATEGY . error READY
    (16) type_specifier -> . LAP
    (17) type_specifier -> . SPLIT
    (18) type_specifier -> . PITBOARD
    (19) type_specifier -> . YELLOW_FLAG
    (20) type_specifier -> . RADIO

    NEUTRO          shift and go to state 12
    error           shift and go to state 13
    LAP             shift and go to state 14
    SPLIT           shift and go to state 15
    PITBOARD        shift and go to state 16
    YELLOW_FLAG     shift and go to state 17
    RADIO           shift and go to state 18

    type_specifier                 shift and go to state 11

state 7

    (3) translation_unit -> main_program function_list .
    (6) function_list -> function_list . function_definition
    (9) function_definition -> . STRATEGY type_specifier ID CORNER parameter_list APEX compound_statement
    (10) function_definition -> . STRATEGY type_specifier ID CORNER APEX compound_statement
    (11) function_definition -> . STRATEGY NEUTRO ID CORNER parameter_list APEX compound_statement
    (12) function_definition -> . STRATEGY NEUTRO ID CORNER APEX compound_statement
    (41) function_definition -> . STRATEGY error READY

    $end            reduce using rule 3 (translation_unit -> main_program function_list .)
    STRATEGY        shift and go to state 6

    function_definition            shift and go to state 9

state 8

    (2) translation_unit -> function_list main_program .
    (4) translation_unit -> function_list main_program . function_list
    (5) function_list -> . function_definition
    (6) function_list -> . function_list function_definition
    (9) function_definition -> . STRATEGY type_specifier ID CORNER parameter_list APEX compound_statement
    (10) function_definition -> . STRATEGY type_specifier ID CORNER APEX compound_statement
    (11) function_definition -> . STRATEGY NEUTRO ID CORNER parameter_list APEX compound_statement
    (12) function_definition -> . STRATEGY NEUTRO ID CORNER APEX compound_statement
    (41) function_definition -> . STRATEGY error READY

    $end            reduce using rule 2 (translation_unit -> function_list main_program .)
    STRATEGY        shift and go to state 6

    function_list                  shift and go to state 19
    function_definition            shift and go to state 5

state 9

    (6) function_list -> function_list function_definition .

    RACE_START      reduce using rule 6 (function_list -> function_list function_definition .)
    STRATEGY        reduce using rule 6 (function_list -> function_list function_definition .)
    $end            reduce using rule 6 (function_list -> function_list function_definition .)


state 10

    (7) main_program -> RACE_START GARAGE . block_item_list READY
    (8) main_program -> RACE_START GARAGE . READY
    (42) main_program -> RACE_START GARAGE . error READY
    (23) block_item_list -> . block_item
    (24) block_item_list -> . block_item_list block_item
    (25) block_item -> . declaration
    (26) block_item -> . statement
    (39) block_item -> . error STOP
    (27) declaration -> . type_specifier ID SETUP expression STOP
    (28) declaration -> . type_specifier ID STOP
    (29) declaration -> . VSC type_specifier ID SETUP expression STOP
    (30) statement -> . expression_statement
    (31) statement -> . compound_statement
    (32) statement -> . selection_statement
    (33) statement -> . iteration_statement
    (34) statement -> . jump_statement
    (35) statement -> . io_statement
    (36) statement -> . end_statement
    (16) type_specifier -> . LAP
    (17) type_specifier -> . SPLIT
    (18) type_specifier -> . PITBOARD
    (19) type_specifier -> . YELLOW_FLAG
    (20) type_specifier -> . RADIO
    (37) expression_statement -> . expression STOP
    (38) expression_statement -> . STOP
    (21) compound_statement -> . GARAGE block_item_list READY
    (22) compound_statement -> . GARAGE READY
    (40) compound_statement -> . GARAGE error READY
    (43) selection_statement -> . STRATEGY_CHECK CORNER expression APEX compound_statement
    (44) selection_statement -> . STRATEGY_CHECK CORNER expression APEX compound_statement STAY_OUT compound_statement
    (45) selection_statement -> . STRATEGY_CHECK CORNER expression APEX compound_statement STAY_OUT selection_statement
    (46) selection_statement -> . GAP_CHECK CORNER expression APEX GARAGE case_list READY
    (47) selection_statement -> . PITWALL CORNER expression APEX GARAGE case_list READY
    (52) iteration_statement -> . PUSH CORNER expression APEX compound_statement
    (53) iteration_statement -> . BOX compound_statement PUSH CORNER expression APEX STOP
    (54) iteration_statement -> . FORMATION_LAP CORNER for_init expression for_semi expression APEX compound_statement
    (55) iteration_statement -> . FORMATION_LAP CORNER for_init expression for_semi APEX compound_statement
    (56) iteration_statement -> . FORMATION_LAP CORNER for_semi for_semi APEX compound_statement
    (61) jump_statement -> . PODIO expression STOP
    (62) jump_statement -> . PODIO STOP
    (63) jump_statement -> . BOX_BOX STOP
    (64) jump_statement -> . DRS STOP
    (65) io_statement -> . BROADCAST CORNER expression APEX STOP
    (66) io_statement -> . TELEMETRY CORNER ID APEX STOP
    (67) end_statement -> . CHECKERED_FLAG STOP
    (68) expression -> . expression TOW expression
    (69) expression -> . expression GAP expression
    (70) expression -> . expression ERS expression
    (71) expression -> . expression STINT expression
    (72) expression -> . expression FUEL_DELTA expression
    (73) expression -> . expression DEAD_HEAT expression
    (74) expression -> . expression OUTLAP expression
    (75) expression -> . expression UNDERCUT expression
    (76) expression -> . expression OVERCUT expression
    (77) expression -> . expression UNDEREQ expression
    (78) expression -> . expression OVEREQ expression
    (79) expression -> . expression BOTH_TYRES expression
    (80) expression -> . expression EITHER_TYRE expression
    (81) expression -> . expression SAFETY expression
    (82) expression -> . expression OVERTAKE expression
    (83) expression -> . GAP expression
    (84) expression -> . REVERSE_GRID expression
    (85) expression -> . REVERSE expression
    (86) expression -> . CORNER expression APEX
    (87) expression -> . ID SETUP expression
    (88) expression -> . ID PITSTOW expression
    (89) expression -> . ID PITGAP expression
    (90) expression -> . ID PITERS expression
    (91) expression -> . ID PITSTINT expression
    (92) expression -> . ID FASTLAP
    (93) expression -> . ID DEGRADATION
    (94) expression -> . SLIPSTREAM expression
    (95) expression -> . POSITION expression
    (96) expression -> . ID CORNER argument_list APEX
    (97) expression -> . ID CORNER APEX
    (100) expression -> . ID
    (101) expression -> . INT_LITERAL
    (102) expression -> . FLOAT_LITERAL
    (103) expression -> . STRING_LITERAL
    (104) expression -> . CHAR_LITERAL
    (105) expression -> . GREEN_LIGHT
    (106) expression -> . RED_LIGHT
    (107) expression -> . DNF

    READY           shift and go to state 22
    error           shift and go to state 23
    VSC             shift and go to state 31
    LAP             shift and go to state 14
    SPLIT           shift and go to state 15
    PITBOARD        shift and go to state 16
    YELLOW_FLAG     shift and go to state 17
    RADIO           shift and go to state 18
    STOP            shift and go to state 27
    GARAGE          shift and go to state 20
    STRATEGY_CHECK  shift and go to state 39
    GAP_CHECK       shift and go to state 41
    PITWALL         shift and go to state 42
    PUSH            shift and go to state 43
    BOX             shift and go to state 44
    FORMATION_LAP   shift and go to state 45
    PODIO           shift and go to state 46
    BOX_BOX         shift and go to state 47
    DRS             shift and go to state 48
    BROADCAST       shift and go to state 49
    TELEMETRY       shift and go to state 50
    CHECKERED_FLAG  shift and go to state 51
    GAP             shift and go to state 52
    REVERSE_GRID    shift and go to state 53
    REVERSE         shift and go to state 54
    CORNER          shift and go to state 40
    ID              shift and go to state 29
    SLIPSTREAM      shift and go to state 55
    POSITION        shift and go to state 56
    INT_LITERAL     shift and go to state 57
    FLOAT_LITERAL   shift and go to state 58
    STRING_LITERAL  shift and go to state 59
    CHAR_LITERAL    shift and go to state 60
    GREEN_LIGHT     shift and go to state 61
    RED_LIGHT       shift and go to state 62
    DNF             shift and go to state 63

    block_item_list                shift and go to state 21
    block_item                     shift and go to state 24
    declaration                    shift and go to state 25
    statement                      shift and go to state 26
    type_specifier                 shift and go to state 28
    expression                     shift and go to state 30
    expression_statement           shift and go to state 32
    compound_statement             shift and go to state 33
    selection_statement            shift and go to state 34
    iteration_statement            shift and go to state 35
    jump_statement                 shift and go to state 36
    io_statement                   shift and go to state 37
    end_statement                  shift and go to state 38

state 11

    (9) function_definition -> STRATEGY type_specifier . ID CORNER parameter_list APEX compound_statement
    (10) function_definition -> STRATEGY type_specifier . ID CORNER APEX compound_statement

    ID              shift and go to state 64


state 12

    (11) function_definition -> STRATEGY NEUTRO . ID CORNER parameter_list APEX compound_statement
    (12) function_definition -> STRATEGY NEUTRO . ID CORNER APEX compound_statement

    ID              shift and go to state 65


state 13

    (41) function_definition -> STRATEGY error . READY

    READY           shift and go to state 66


state 14

    (16) type_specifier -> LAP .

    ID              reduce using rule 16 (type_specifier -> LAP .)


state 15

    (17) type_specifier -> SPLIT .

    ID              reduce using rule 17 (type_specifier -> SPLIT .)


state 16

    (18) type_specifier -> PITBOARD .

    ID              reduce using rule 18 (type_specifier -> PITBOARD .)


state 17

    (19) type_specifier -> YELLOW_FLAG .

    ID              reduce using rule 19 (type_specifier -> YELLOW_FLAG .)


state 18

    (20) type_specifier -> RADIO .

    ID              reduce using rule 20 (type_specifier -> RADIO .)


state 19

    (4) translation_unit -> function_list main_program function_list .
    (6) function_list -> function_list . function_definition
    (9) function_definition -> . STRATEGY type_specifier ID CORNER parameter_list APEX compound_statement
    (10) function_definition -> . STRATEGY type_specifier ID CORNER APEX compound_statement
    (11) function_definition -> . STRATEGY NEUTRO ID CORNER parameter_list APEX compound_statement
    (12) function_definition -> . STRATEGY NEUTRO ID CORNER APEX compound_statement
    (41) function_definition -> . STRATEGY error READY

    $end            reduce using rule 4 (translation_unit -> function_list main_program function_list .)
    STRATEGY        shift and go to state 6

    function_definition            shift and go to state 9

state 20

    (21) compound_statement -> GARAGE . block_item_list READY
    (22) compound_statement -> GARAGE . READY
    (40) compound_statement -> GARAGE . error READY
    (23) block_item_list -> . block_item
    (24) block_item_list -> . block_item_list block_item
    (25) block_item -> . declaration
    (26) block_item -> . statement
    (39) block_item -> . error STOP
    (27) declaration -> . type_specifier ID SETUP expression STOP
    (28) declaration -> . type_specifier ID STOP
    (29) declaration -> . VSC type_specifier ID SETUP expression STOP
    (30) statement -> . expression_statement
    (31) statement -> . compound_statement
    (32) statement -> . selection_statement
    (33) statement -> . iteration_statement
    (34) statement -> . jump_statement
    (35) statement -> . io_statement
    (36) statement -> . end_statement
    (16) type_specifier -> . LAP
    (17) type_specifier -> . SPLIT
    (18) type_specifier -> . PITBOARD
    (19) type_specifier -> . YELLOW_FLAG
    (20) type_specifier -> . RADIO
    (37) expression_statement -> . expression STOP
    (38) expression_statement -> . STOP
    (21) compound_statement -> . GARAGE block_item_list READY
    (22) compound_statement -> . GARAGE READY
    (40) compound_statement -> . GARAGE error READY
    (43) selection_statement -> . STRATEGY_CHECK CORNER expression APEX compound_statement
    (44) selection_statement -> . STRATEGY_CHECK CORNER expression APEX compound_statement STAY_OUT compound_statement
    (45) selection_statement -> . STRATEGY_CHECK CORNER expression APEX compound_statement STAY_OUT selection_statement
    (46) selection_statement -> . GAP_CHECK CORNER expression APEX GARAGE case_list READY
    (47) selection_statement -> . PITWALL CORNER expression APEX GARAGE case_list READY
    (52) iteration_statement -> . PUSH CORNER expression APEX compound_statement
    (53) iteration_statement -> . BOX compound_statement PUSH CORNER expression APEX STOP
    (54) iteration_statement -> . FORMATION_LAP CORNER for_init expression for_semi expression APEX compound_statement
    (55) iteration_statement -> . FORMATION_LAP CORNER for_init expression for_semi APEX compound_statement
    (56) iteration_statement -> . FORMATION_LAP CORNER for_semi for_semi APEX compound_statement
    (61) jump_statement -> . PODIO expression STOP
    (62) jump_statement -> . PODIO STOP
    (63) jump_statement -> . BOX_BOX STOP
    (64) jump_statement -> . DRS STOP
    (65) io_statement -> . BROADCAST CORNER expression APEX STOP
    (66) io_statement -> . TELEMETRY CORNER ID APEX STOP
    (67) end_statement -> . CHECKERED_FLAG STOP
    (68) expression -> . expression TOW expression
    (69) expression -> . expression GAP expression
    (70) expression -> . expression ERS expression
    (71) expression -> . expression STINT expression
    (72) expression -> . expression FUEL_DELTA expression
    (73) expression -> . expression DEAD_HEAT expression
    (74) expression -> . expression OUTLAP expression
    (75) expression -> . expression UNDERCUT expression
    (76) expression -> . expression OVERCUT expression
    (77) expression -> . expression UNDEREQ expression
    (78) expression -> . expression OVEREQ expression
    (79) expression -> . expression BOTH_TYRES expression
    (80) expression -> . expression EITHER_TYRE expression
    (81) expression -> . expression SAFETY expression
    (82) expression -> . expression OVERTAKE expression
    (83) expression -> . GAP expression
    (84) expression -> . REVERSE_GRID expression
    (85) expression -> . REVERSE expression
    (86) expression -> . CORNER expression APEX
    (87) expression -> . ID SETUP expression
    (88) expression -> . ID PITSTOW expression
    (89) expression -> . ID PITGAP expression
    (90) expression -> . ID PITERS expression
    (91) expression -> . ID PITSTINT expression
    (92) expression -> . ID FASTLAP
    (93) expression -> . ID DEGRADATION
    (94) expression -> . SLIPSTREAM expression
    (95) expression -> . POSITION expression
    (96) expression -> . ID CORNER argument_list APEX
    (97) expression -> . ID CORNER APEX
    (100) expression -> . ID
    (101) expression -> . INT_LITERAL
    (102) expression -> . FLOAT_LITERAL
    (103) expression -> . STRING_LITERAL
    (104) expression -> . CHAR_LITERAL
    (105) expression -> . GREEN_LIGHT
    (106) expression -> . RED_LIGHT
    (107) expression -> . DNF

    READY           shift and go to state 68
    error           shift and go to state 69
    VSC             shift and go to state 31
    LAP             shift and go to state 14
    SPLIT           shift and go to state 15
    PITBOARD        shift and go to state 16
    YELLOW_FLAG     shift and go to state 17
    RADIO           shift and go to state 18
    STOP            shift and go to state 27
    GARAGE          shift and go to state 20
    STRATEGY_CHECK  shift and go to state 39
    GAP_CHECK       shift and go to state 41
    PITWALL         shift and go to state 42
    PUSH            shift and go to state 43
    BOX             shift and go to state 44
    FORMATION_LAP   shift and go to state 45
    PODIO           shift and go to state 46
    BOX_BOX         shift and go to state 47
    DRS             shift and go to state 48
    BROADCAST       shift and go to state 49
    TELEMETRY       shift and go to state 50
    CHECKERED_FLAG  shift and go to state 51
    GAP             shift and go to state 52
    REVERSE_GRID    shift and go to state 53
    REVERSE         shift and go to state 54
    CORNER          shift and go to state 40
    ID              shift and go to state 29
    SLIPSTREAM      shift and go to state 55
    POSITION        shift and go to state 56
    INT_LITERAL     shift and go to state 57
    FLOAT_LITERAL   shift and go to state 58
    STRING_LITERAL  shift and go to state 59
    CHAR_LITERAL    shift and go to state 60
    GREEN_LIGHT     shift and go to state 61
    RED_LIGHT       shift and go to state 62
    DNF             shift and go to state 63

    block_item_list                shift and go to state 67
    block_item                     shift and go to state 24
    declaration                    shift and go to state 25
    statement                      shift and go to state 26
    type_specifier                 shift and go to state 28
    expression                     shift and go to state 30
    expression_statement           shift and go to state 32
    compound_statement             shift and go to state 33
    selection_statement            shift and go to state 34
    iteration_statement            shift and go to state 35
    jump_statement                 shift and go to state 36
    io_statement                   shift and go to state 37
    end_statement                  shift and go to state 38

state 21

    (7) main_program -> RACE_START GARAGE block_item_list . READY
    (24) block_item_list -> block_item_list . block_item
    (25) block_item -> . declaration
    (26) block_item -> . statement
    (39) block_item -> . error STOP
    (27) declaration -> . type_specifier ID SETUP expression STOP
    (28) declaration -> . type_specifier ID STOP
    (29) declaration -> . VSC type_specifier ID SETUP expression STOP
    (30) statement -> . expression_statement
    (31) statement -> . compound_statement
    (32) statement -> . selection_statement
    (33) statement -> . iteration_statement
    (34) statement -> . jump_statement
    (35) statement -> . io_statement
    (36) statement -> . end_statement
    (16) type_specifier -> . LAP
    (17) type_specifier -> . SPLIT
    (18) type_specifier -> . PITBOARD
    (19) type_specifier -> . YELLOW_FLAG
    (20) type_specifier -> . RADIO
    (37) expression_statement -> . expression STOP
    (38) expression_statement -> . STOP
    (21) compound_statement -> . GARAGE block_item_list READY
    (22) compound_statement -> . GARAGE READY
    (40) compound_statement -> . GARAGE error READY
    (43) selection_statement -> . STRATEGY_CHECK CORNER expression APEX compound_statement
    (44) selection_statement -> . STRATEGY_CHECK CORNER expression APEX compound_statement STAY_OUT compound_statement
    (45) selection_statement -> . STRATEGY_CHECK CORNER expression APEX compound_statement STAY_OUT selection_statement
    (46) selection_statement -> . GAP_CHECK CORNER expression APEX GARAGE case_list READY
    (47) selection_statement -> . PITWALL CORNER expression APEX GARAGE case_list READY
    (52) iteration_statement -> . PUSH CORNER expression APEX compound_statement
    (53) iteration_statement -> . BOX compound_statement PUSH CORNER expression APEX STOP
    (54) iteration_statement -> . FORMATION_LAP CORNER for_init expression for_semi expression APEX compound_statement
    (55) iteration_statement -> . FORMATION_LAP CORNER for_init expression for_semi APEX compound_statement
    (56) iteration_statement -> . FORMATION_LAP CORNER for_semi for_semi APEX compound_statement
    (61) jump_statement -> . PODIO expression STOP
    (62) jump_statement -> . PODIO STOP
    (63) jump_statement -> . BOX_BOX STOP
    (64) jump_statement -> . DRS STOP
    (65) io_statement -> . BROADCAST CORNER expression APEX STOP
    (66) io_statement -> . TELEMETRY CORNER ID APEX STOP
    (67) end_statement -> . CHECKERED_FLAG STOP
    (68) expression -> . expression TOW expression
    (69) expression -> . expression GAP expression
    (70) expression -> . expression ERS expression
    (71) expression -> . expression STINT expression
    (72) expression -> . expression FUEL_DELTA expression
    (73) expression -> . expression DEAD_HEAT expression
    (74) expression -> . expression OUTLAP expression
    (75) expression -> . expression UNDERCUT expression
    (76) expression -> . expression OVERCUT expression
    (77) expression -> . expression UNDEREQ expression
    (78) expression -> . expression OVEREQ expression
    (79) expression -> . expression BOTH_TYRES expression
    (80) expression -> . expression EITHER_TYRE expression
    (81) expression -> . expression SAFETY expression
    (82) expression -> . expression OVERTAKE expression
    (83) expression -> . GAP expression
    (84) expression -> . REVERSE_GRID expression
    (85) expression -> . REVERSE expression
    (86) expression -> . CORNER expression APEX
    (87) expression -> . ID SETUP expression
    (88) expression -> . ID PITSTOW expression
    (89) expression -> . ID PITGAP expression
    (90) expression -> . ID PITERS expression
    (91) expression -> . ID PITSTINT expression
    (92) expression -> . ID FASTLAP
    (93) expression -> . ID DEGRADATION
    (94) expression -> . SLIPSTREAM expression
    (95) expression -> . POSITION expression
    (96) expression -> . ID CORNER argument_list APEX
    (97) expression -> . ID CORNER APEX
    (100) expression -> . ID
    (101) expression -> . INT_LITERAL
    (102) expression -> . FLOAT_LITERAL
    (103) expression -> . STRING_LITERAL
    (104) expression -> . CHAR_LITERAL
    (105) expression -> . GREEN_LIGHT
    (106) expression -> . RED_LIGHT
    (107) expression -> . DNF
